--- a/test04-shared/CMakeLists.txt
+++ b/test04-shared/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-project(test01 LANGUAGES CXX)
+project(test04-shared LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQURIED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
