fixed project name

--- a/test05-cond/CMakeLists.txt
+++ b/test05-cond/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-project(test04-shared LANGUAGES CXX)
+project(test05-cond LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQURIED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
