removed SHARED so BUILD_SHARED_LIBS works

--- a/test07-config_build_type/CMakeLists.txt
+++ b/test07-config_build_type/CMakeLists.txt
@@ -30,7 +30,7 @@ list(APPEND COMPILER_FLAGS "-Wall" "-g")
 endif()
 
 if(USE_LIBS) 
-	add_library(sharedhello SHARED ${source_files})
+	add_library(sharedhello ${source_files})
 	set_target_properties(sharedhello PROPERTIES POSITION_INDEPENDENT_CODE 1)
 	add_executable(testprogram main.cpp)
 	target_compile_options(testprogram PRIVATE ${COMPILER_FLAGS})
